# breakout

./: .gitignore  pyproject.toml
src/: config.py  main.py  omega_breakout_game.py
src/sprites/: __init__.py  ball_sprite.py  paddle_sprite.py
src/views/: base_view.py  game_view.py  gameview.py
