[project]
name = "breakout"
version = "0.1.0"
description = ""
authors = [
    {name = "niux3",email = "renaudbourdeau@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade (>=3.3.3,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
